fixed color scheme to improve contrast and uniformity

--- a/src/components/AnswerPage/AnswerPage.css
+++ b/src/components/AnswerPage/AnswerPage.css
@@ -15,7 +15,7 @@
   font-weight: 900; 
   font-size: 24px; 
   margin-bottom: 0px;
-  color: #0039F0
+  color: #058E6E
 }
 
 .DisplayFeedback{
