--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu');
 @import url("https://fonts.googleapis.com/css?family=Dancing+Script");
-@import url("https://fonts.googleapis.com/css?family=Raleway");
+@import url("https://fonts.googleapis.com/css?family=Roboto");
 @import url("https://fonts.googleapis.com/css?family=Montserrat");
 /* font family: 'Flamenco', cursive' */
 @import url('https://fonts.googleapis.com/css?family=Flamenco'); 
@@ -18,7 +18,7 @@ body {
   font-family: "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: rgb(240, 240, 240);
+  background: #e9ebee;
 }
 
 :root {
